<resources>
    <string name="app_name">OrcaStars</string>
    <string name="subtitle">by Orca Conservancy</string>
    <string name="star_of_the_month_info">Three orcas against the sunset</string>
    <string name="hours_open">Open until 9pm</string>
    <string name="business_title">Fishfood X</string>
    <string name="business_tags">Seafood restaurant, seafood &amp; sushi...</string>
    <string name="distance_away">2.3 mi</string>
    <string name="info_para">Fishfood X is dedicated to supporting sustainable fishing, 
        and giving back by donating to the Orca Conservancy. 
        All ingredients are 100% organic and ethically sourced. </string>
    <string name="distance_away_full">2.3 miles away</string>
    <string name="hours_open_full">8am to 9pm Mon-Sat\n10am to 7pm Sun</string>
    <string name="phone_fish">(555) 123-1337</string>
    <string name="location">Bothell, WA</string>
    <string name="FRONTEND_HOST">https://www.orcaconservancy.org/5-2/orca-stars/</string>
    <string name="about_us">About Us:</string>
    <string name="description">Orca Conservancy’s mission is to help businesses adapt better
        practices that will make a positive impact on the critical habitat where our Southern
        Resident Orcas live. We believe, together, we can do our part to improve the quality
        of the Salish Sea.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- added -->
    <string name="no_comments">No comments</string>
    <string name="loading_businesses">Loading businesses…</string>
    <string name="search_businesses_hint">Search Businesses…</string>
    <string name="cd_businesses_list">Businesses list</string>
    <string name="cd_business_name">Name of the business</string>
    <string name="cd_search_businesses">Search businesses</string>

</resources>
