<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FishfoodxFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sushi"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/sushi"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/see_all_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="See all photos"
                style="@style/MainPageButtons"
                android:layout_alignEnd="@id/sushi"
                android:layout_alignRight="@+id/sushi"
                android:layout_alignBottom="@+id/sushi"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/Fishfood_X_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business_title"
                style="@style/Titleview"
                android:layout_below="@+id/sushi"/>

            <ImageButton
                android:id="@+id/Unfav_icon"
                style="@style/favicon"
                android:background="@drawable/ic_star_border_black_48dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/sushi"/>

            <TextView
                android:id="@+id/fishfoodx_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_tags"
                android:layout_marginLeft="40dp"
                android:layout_alignLeft="@id/Fishfood_X_title"
                android:layout_alignStart="@id/Fishfood_X_title"
                android:layout_below="@id/Fishfood_X_title"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/Open_until_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/hours_open"
                style="@style/Standard_Text"
                android:layout_marginTop="15dp"
                android:layout_below="@id/fishfoodx_tags"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_away"
                android:layout_marginRight="10dp"
                android:layout_alignRight="@id/Unfav_icon"
                android:layout_alignBottom="@+id/Open_until_9"
                style="@style/Standard_Text"/>
        </RelativeLayout>

            <TextView
                android:id="@+id/fishfoodx_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Standard_Text"
                android:text="@string/info_para"
                android:layout_margin="20dp"/>

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/iconmarker"
                    style="@style/business_page_icons"
                    android:background="@drawable/ic_room_black_48dp"
                    app:layout_column="0"
                    app:layout_row="0"/>
                <TextView
                    android:id="@+id/textmarker"
                    style="@style/Standard_Text"
                    app:layout_column="1"
                    app:layout_row="0"
                    android:text="@string/distance_away_full"/>

                <Button
                    android:id="@+id/directions"
                    style="@style/MainPageButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Directions"
                    app:layout_column="3"
                    app:layout_row="0"
                    android:layout_marginRight="20dp"/>

                <ImageButton
                    android:id="@+id/iconclock"
                    style="@style/business_page_icons"
                    android:background="@drawable/ic_query_builder_black_48dp"
                    app:layout_column="0"
                    app:layout_row="1"/>
                <TextView
                    android:id="@+id/textclock"
                    style="@style/Standard_Text"
                    app:layout_column="1"
                    app:layout_row="1"
                    android:text="@string/hours_open_full"/>

                <ImageButton
                    android:id="@+id/iconphone"
                    style="@style/business_page_icons"
                    android:background="@drawable/ic_call_black_48dp"
                    app:layout_column="0"
                    app:layout_row="3" />

                <TextView
                    android:id="@+id/textphone"
                    style="@style/Standard_Text"
                    app:layout_column="1"
                    app:layout_row="3"
                    android:text="@string/phone_fish"/>

                <ImageButton
                    android:id="@+id/iconworld"
                    style="@style/business_page_icons"
                    android:background="@drawable/ic_public_black_48dp"
                    app:layout_column="0"
                    app:layout_row="4"/>
                <TextView
                    android:id="@+id/textworld"
                    style="@style/Standard_Text"
                    app:layout_column="1"
                    app:layout_row="4"
                    android:text="@string/location"/>

            </androidx.gridlayout.widget.GridLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>