<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.BusinessListFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp">

        <data>
            <variable
                name="isLoading"
                type="boolean" />
        </data>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_horizontal_margin"
                android:layout_marginEnd="@dimen/item_horizontal_margin"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/businesses_search_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/search_products_hint"/>

                <ImageButton
                    android:id="@+id/businesses_search_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/cd_search_businesses"
                    app:srcCompat="@drawable/ic_search_black_24dp"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/mapviewicon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:backgroundTint="@color/colorWhite"
                android:background="@drawable/ic_map_black_48dp"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/loading_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/loading_businesses"
                android:textAlignment="center"
                app:visibleGone="@{isLoading}"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/business_list"
                android:contentDescription="@string/cd_businesses_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"
                app:visibleGone="@{!isLoading}"/>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>